syntax ="proto3";

package calculator;

option go_package="calculatorpb";

message Calculating{
    int32 numbOne=1;
    int32 numbTwo=2;
}

message CalculatorRequest{
    Calculating calculating=1;
}

message CalculatorResponse{
    int32 result = 1;
}

message PrimeNumber{
    int32 prime = 1;
}

message PrimeNumberDecompRequest{
    PrimeNumber primeNumber = 1;
}

message PrimeNumberDecompResponse{
    int32 result=1;
}

message ComputeAverageRequest{
    int32 number = 1;
}

message ComputeAverageResponse{
    float result=1;
}

message FindMaximumRequest{
    int32 number = 1;
}

message FindMaximumResponse {
    int32 result = 1;
}

service CalculatorService{
    rpc Calculate(CalculatorRequest) returns (CalculatorResponse){};

    rpc PrimeNumberDecomp(PrimeNumberDecompRequest) returns(stream PrimeNumberDecompResponse){};
    
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}
